errors.txt
mass_spring.cpp:145:33: error: too many arguments to function call, expected 0, have 2
                                total_force += (*it)->apply(n, t);
                                               ~~~~~~~~~~~~ ^~~~
mass_spring.cpp:128:3: note: 'apply' declared here
                virtual void apply()=0;
                ^
mass_spring.cpp:161:9: warning: 'GravityForce::apply' hides overloaded virtual function [-Woverloaded-virtual]
                Point apply(Node n, double t) const {
                      ^
mass_spring.cpp:128:16: note: hidden overloaded virtual function 'Stimulus::apply' declared here: different number of parameters (0 vs 2)
                virtual void apply()=0;
                             ^
mass_spring.cpp:175:10: warning: 'MassSpringForce::apply' hides overloaded virtual function [-Woverloaded-virtual]
          Point apply(Node n, double t) const {
                ^
mass_spring.cpp:128:16: note: hidden overloaded virtual function 'Stimulus::apply' declared here: different number of parameters (0 vs 2)
                virtual void apply()=0;
                             ^
mass_spring.cpp:266:27: error: allocating an object of abstract class type 'GravityForce'
  Stimulus* g_force = new GravityForce();
                          ^
mass_spring.cpp:128:16: note: unimplemented pure virtual method 'apply' in 'GravityForce'
                virtual void apply()=0;
                             ^
mass_spring.cpp:267:32: error: allocating an object of abstract class type 'MassSpringForce'
  Stimulus* spring_force = new MassSpringForce();
                               ^
mass_spring.cpp:128:16: note: unimplemented pure virtual method 'apply' in 'MassSpringForce'
                virtual void apply()=0;
                             ^
mass_spring.cpp:274:35: error: no matching function for call to object of type 'Force'
    symp_euler_step(graph, t, dt, problem1_f();
                                  ^~~~~~~~~~
mass_spring.cpp:142:9: note: candidate function not viable: requires 2 arguments, but 0 were provided
                Point operator()(Node n, double t) const {
                      ^
2 warnings and 4 errors generated.
make: *** [mass_spring.o] Error 1
